--- a/skyhud2.html
+++ b/skyhud2.html
@@ -42,18 +42,34 @@
             };
         }
 
-        function drawHorizon(alpha, beta, gamma) {
-            // Calculate the horizon line position based on the device orientation
-            let x1 = canvas.width / 2;
-            let y1 = canvas.height / 2 - beta * canvas.height / 90;
-            let x2 = canvas.width;
-            let y2 = canvas.height / 2;
+        // function drawHorizon(alpha, beta, gamma) {
+        //     // Calculate the horizon line position based on the device orientation
+        //     let x1 = canvas.width / 2;
+        //     let y1 = canvas.height / 2 - beta * canvas.height / 90;
+        //     let x2 = canvas.width;
+        //     let y2 = canvas.height / 2;
 
-            // Draw the horizon line
+        //     // Draw the horizon line
+        //     ctx.beginPath();
+        //     ctx.moveTo(x1, y1);
+        //     ctx.lineTo(x2, y2);
+        //     ctx.stroke();
+        // }
+
+        function animate() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+            // Calculate the position of the sun based on the device's orientation
+            const x = canvas.width / 2 + (deviceOrientation.gamma / 90) * (canvas.width / 2);
+            const y = canvas.height / 2 + (deviceOrientation.beta / 90) * (canvas.height / 2);
+
+            // Draw the sun at its calculated position
             ctx.beginPath();
-            ctx.moveTo(x1, y1);
-            ctx.lineTo(x2, y2);
-            ctx.stroke();
+            ctx.arc(x, y, 50, 0, 2 * Math.PI);
+            ctx.fillStyle = "yellow";
+            ctx.fill();
+
+            requestAnimationFrame(animate);
         }
 
         function onClick() {
@@ -85,5 +101,6 @@
         }
 
         permissionButton.addEventListener('click', onClick);
+        animate();
     </script>
 </body>
