added gr-tracker page

--- a/index.html
+++ b/index.html
@@ -57,6 +57,37 @@
                 </div>
             </div>
 
+            <!-- gr-tracker -->
+            <div class="column is-4-fullhd is-4-widescreen is-4-desktop is-4-tablet is-12-mobile is-centered">
+                <div class="card">
+                    <header class="card-header has-background-primary">
+                        <p
+                            class="card-header-title is-centered has-text-primary-light
+                                is-size-4-fullhd is-size-5-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
+                            gr-tracker
+                        </p>
+                    </header>
+                    <div class="card-content">
+                        <figure class="image mb-4">
+                            <img src="images/project_gr-tracker.jpg" alt="">
+                        </figure>
+                        <p class="mb-4">
+                            This web app allows users to register hikes on the Belgian long-distance GR hiking network.
+                            The app provides maps that highlight which portions of the trails users have walked on. It
+                            also calculates statistics such as the completion % of each trail. Users can also view the
+                            hikes and completion percentages of their friends.
+                        <footer class="card-footer has-background-light">
+                            <button class="button is-link is-outlined is-fullwidth"
+                                onclick="window.location.href='https://gr-tracker.herokuapp.com/';">View web
+                                app on Heroku</button>
+                            <button class="button is-link is-outlined is-fullwidth"
+                                onclick="window.location.href='https://github.com/svanwal/gr-tracker';">View code
+                                on GitHub</button>
+                        </footer>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
 
