added spacing between buttons

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <button class="button is-link is-outlined is-fullwidth"
                                 onclick="window.location.href='https://gr-tracker.herokuapp.com/';">View web
                                 app on Heroku</button>
-                            <button class="button is-link is-outlined is-fullwidth"
+                            <button class="button is-link is-outlined is-fullwidth" style="margin-left: 4px;"
                                 onclick="window.location.href='https://github.com/svanwal/gr-tracker';">View code
                                 on GitHub</button>
                         </footer>
