--- a/gr-tracker.html
+++ b/gr-tracker.html
@@ -2,12 +2,13 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="7; url='https://gr-tracker.herokuapp.com/'" />
+    <title>HTML Meta Tag</title>
+    <meta http-equiv="refresh" content="0; url = https://gr-tracker.herokuapp.com/" />
 </head>
 
 <body>
-    <p>Please follow <a href="https://gr-tracker.herokuapp.com/">this link</a> to view the GR-tracker web app on Heroku.
-    </p>
+    <p>Redirecting to the GR-tracker web app on Heroku... click on <a href="https://gr-tracker.herokuapp.com/">this
+            link</a> if the redirect is not working.</p>
 </body>
 
 </html>
