updated project links

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- Introductory text -->
         <div class="columns is-centered has-text-centered">
             <div class="column is-6-fullhd is-6-widescreen is-12-desktop is-12-tablet is-12-mobile">
-                This page (under construction) contains my digital project portfolio.
+                This page contains my digital project portfolio.
             </div>
         </div>
 
@@ -30,7 +30,7 @@
         <div class="columns is-centered">
 
             <!-- gr-analysis -->
-            <div class="column is-4-fullhd is-4-widescreen is-4-desktop is-4-tablet is-12-mobile is-centered">
+            <div class="column is-4-fullhd is-4-widescreen is-6-desktop is-6-tablet is-12-mobile is-centered">
                 <div class="card">
                     <header class="card-header has-background-primary">
                         <p
@@ -51,14 +51,16 @@
                         </p>
                         <footer class="card-footer has-background-light">
                             <button class="button is-link is-outlined is-fullwidth"
-                                onclick="window.location.href='gr-analysis.html';">Go to project page</button>
+                                onclick="window.location.href='gr-analysis.html';">View results</button>
+                            <button class="button is-link is-outlined is-fullwidth" style="margin-left: 4px;"
+                                onclick="window.location.href='https://github.com/svanwal/gr-analysis';">View GitHub code</button>
                         </footer>
                     </div>
                 </div>
             </div>
 
             <!-- gr-tracker -->
-            <div class="column is-4-fullhd is-4-widescreen is-4-desktop is-4-tablet is-12-mobile is-centered">
+            <div class="column is-4-fullhd is-4-widescreen is-6-desktop is-6-tablet is-12-mobile is-centered">
                 <div class="card">
                     <header class="card-header has-background-primary">
                         <p
@@ -78,11 +80,9 @@
                             hikes and completion percentages of their friends.
                         <footer class="card-footer has-background-light">
                             <button class="button is-link is-outlined is-fullwidth"
-                                onclick="window.location.href='https://gr-tracker.herokuapp.com/';">View web
-                                app on Heroku</button>
+                                onclick="window.location.href='https://gr-tracker.herokuapp.com/';">View Heroku app</button>
                             <button class="button is-link is-outlined is-fullwidth" style="margin-left: 4px;"
-                                onclick="window.location.href='https://github.com/svanwal/gr-tracker';">View code
-                                on GitHub</button>
+                                onclick="window.location.href='https://github.com/svanwal/gr-tracker';">View GitHub code</button>
                         </footer>
                     </div>
                 </div>
