--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <p
                             class="card-header-title is-centered has-text-primary-light
                                 is-size-4-fullhd is-size-5-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
-                            gr-analysis
+                            GR Analysis
                         </p>
                     </header>
                     <div class="card-content">
@@ -66,7 +66,7 @@
                         <p
                             class="card-header-title is-centered has-text-primary-light
                                 is-size-4-fullhd is-size-5-widescreen is-size-5-desktop is-size-6-tablet is-size-6-mobile">
-                            gr-tracker
+                            GR Tracker
                         </p>
                     </header>
                     <div class="card-content">
